--- a/AS2018 etudiants/AS2018 etudiants.vcxproj.filters
+++ b/AS2018 etudiants/AS2018 etudiants.vcxproj.filters
@@ -69,4 +69,9 @@
       <Filter>Fichiers d%27en-tête</Filter>
     </ClInclude>
   </ItemGroup>
+  <ItemGroup>
+    <Image Include="Res\lemonde.png">
+      <Filter>Fichiers de ressources</Filter>
+    </Image>
+  </ItemGroup>
 </Project>
