--- a/AS2018 etudiants/AS2018 etudiants.vcxproj
+++ b/AS2018 etudiants/AS2018 etudiants.vcxproj
@@ -174,6 +174,9 @@
     <ClInclude Include="Position.h" />
     <ClInclude Include="Voleur.h" />
   </ItemGroup>
+  <ItemGroup>
+    <Image Include="Res\lemonde.png" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
